# simple-cloud-kit

./: .black  .flake8  .gitignore  .gitmodules  README.md  build-all.ps1  build-all.sh  build-module.ps1  build-module.sh  build.ps1  build.sh  flakeit.ps1  flakeit.sh  package.ps1  package.sh  pipit.py  prebuild.py  publish.ps1  publish.sh  pytest.ps1  pytest.sh  requirements.txt  tag-all.ps1  tag-all.sh  versions.json
core-docs/: README.md  pyproject.toml
core-docs/core_docs/: __init__.py  _version.py  build.py
core-docs/docs/: conf.py  index.rst
core-docs/docs/_static/: custom.css
core-docs/docs/developer_guide/: api_reference.rst  index.rst  modules.rst  setup.rst
core-docs/docs/technical_reference/: index.rst  modules.rst
core-docs/docs/technical_reference/core-api/: core-api-summary.rst  core-api.rst
core-docs/docs/technical_reference/core-api-auth/: core-api-auth-summary.rst  core-api-auth.rst
core-docs/docs/technical_reference/core-automation/: core-automation-summary.rst  core-automation.rst
core-docs/docs/technical_reference/core-codecommit-listener/: core-codecommit-listener-summary.rst  core-codecommit-listener.rst
core-docs/docs/technical_reference/core-component-compiler/: core-component-compiler-summary.rst  core-component-compiler.rst
core-docs/docs/technical_reference/core-db/: client_db_schema.rst  core-db-summary.rst  core-db.rst  registry_db_schema.rst
core-docs/docs/technical_reference/core-deployspec-compiler/: core-deployspec-compiler-summary.rst  core-deployspec-compiler.rst
core-docs/docs/technical_reference/core-execute/: core-execute-summary.rst  core-execute.rst
core-docs/docs/technical_reference/core-framework/: core-framework-summary.rst  core-framework.rst
core-docs/docs/technical_reference/core-helper/: core-helper-summary.rst  core-helper.rst
core-docs/docs/technical_reference/core-invoker/: core-invoker-summary.rst  (+1 more)
core-docs/docs/user_guide/: commandline.rst  faq.rst  features.rst  getting_started.rst  index.rst  introduction.rst  organizations.rst  using.rst
(+39 files in other folders)
