[tool.poetry]
name = "core-docs"
version = "0.1.0"
description = "Documentation for Core Automation"
authors = ["James Barwick <jbarwick@me.com>"]
license = "GPL-3.0-only"
readme = "README.md"

keywords = ["simple-cloud-kit", "core-automation", "core", "sck", "docs"]

include = ["user-guide/*", "developer-guide/*", "api-guide/*", "locale/**/LC_MESSAGES/*.po", "locale/**/LC_MESSAGES/*.mo"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
core-framework = { path = "../core-framework", develop = true }
cattrs = ">=23.1.2"
lsprotocol = "2024.0.0a2"
websockets = { version = "*", optional = true }
sphinx-rtd-theme = "^3.0.2"
sphinx = "^8.1.3"

[[tool.poetry.source]]
name = "nexus"
url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "explicit"

[tool.poetry.group.docs.dependencies]
myst-parser = "^4.0.0"
sphinx_design = "^0.6.1"
sphinx-autodoc-typehints = "^2.5.0"
sphinxcontrib-httpdomain = "^1.7.1"
sphinxcontrib-openapi = "^0.8.4"
sphinx-autobuild = "^2024.10.3"
furo = "^2024.8.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"
cfn-lint = "^1.18.4"
doc8 = "^1.1.2"
black = "^24.10.0"
pytest-dotenv = "^0.5.2"
rstcheck = "^6.2.4"
esbonio-extensions = "^0.2.3"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
ignore-untracked = true
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning.files."core_docs/_version.py"]
persistent-substitution = true
initial-content = """
  \"\"\"
  This is the version informatooin for this template
  \"\"\"
  __version__ = "0.0.0"
  __version_tuple__ = (0, 0, 0)
"""

# Create script to build.main
[tool.poetry.scripts]
build = "core_docs.build:main"

[tool.esbonio.sphinx]
pythonCommand = ["poetry", "run", "python"]
